[gd_scene load_steps=27 format=3 uid="uid://b5cxjtaci2ghb"]

[ext_resource type="Script" uid="uid://ddgtlpwm2kd6g" path="res://Scripts/Characters/Enemy/Enemy.gd" id="1_3vkvf"]
[ext_resource type="Material" uid="uid://3taev71ds7q1" path="res://Resources/Shaders/EnemyShaderMaterial.tres" id="3_2bftf"]
[ext_resource type="Script" uid="uid://b6gglrtfqcm1e" path="res://Scripts/Characters/Components/HealthComponent.gd" id="3_4uku2"]
[ext_resource type="Texture2D" uid="uid://gd34igh4nfb8" path="res://Assets/Characters/Attack-Sheet.png" id="3_722na"]
[ext_resource type="Texture2D" uid="uid://bgw0xex23wnpv" path="res://Assets/Characters/Idle-Sheet.png" id="4_hgij8"]
[ext_resource type="Texture2D" uid="uid://b7j2mu23ssoxs" path="res://Assets/Characters/Jump-Sheet.png" id="5_b367p"]
[ext_resource type="Texture2D" uid="uid://cj37ju0miq5ip" path="res://Assets/Characters/Run-Sheet.png" id="6_6hxy6"]
[ext_resource type="Texture2D" uid="uid://cg1ebwdbqkh4n" path="res://Assets/Characters/Death-Sheet.png" id="7_1fx0i"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://dq2x2tdcfb4as" path="res://Resources/Animations/AnimationStateMachine.tres" id="8_b367p"]
[ext_resource type="Script" uid="uid://deim05olvc300" path="res://Scripts/Characters/Components/AttackArea.gd" id="9_6hxy6"]
[ext_resource type="Script" uid="uid://bc6ejk8gkkfrp" path="res://Scripts/Characters/Enemy/States/EnemyStateMachine.gd" id="10_0h3dq"]
[ext_resource type="Script" uid="uid://e5vof5h28b63" path="res://Scripts/Characters/Enemy/States/PatrolState.gd" id="11_pgva4"]
[ext_resource type="Script" uid="uid://10hmvt1bsbhp" path="res://Scripts/Characters/Enemy/States/FollowState.gd" id="12_2bftf"]
[ext_resource type="Script" uid="uid://dy78vlxc8ypnu" path="res://Scripts/Characters/Enemy/States/EnemyAttackState.gd" id="13_t6s76"]
[ext_resource type="Script" uid="uid://cwq3h2af0kpcn" path="res://Scripts/Characters/Enemy/States/DeadState.gd" id="14_4ycpn"]
[ext_resource type="Script" uid="uid://d23nyajdjnwyj" path="res://Scripts/Characters/Enemy/HurtBox.gd" id="15_pgva4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2dwjk"]
radius = 6.0
height = 22.0

[sub_resource type="Animation" id="Animation_o5en2"]
resource_name = "Attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_722na")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackArea:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_vqggo"]
resource_name = "Dead"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_1fx0i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_7qdam"]
resource_name = "Idle"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_hgij8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_gc10f"]
resource_name = "Jump"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_b367p")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_7pt4t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackArea:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qkgjm"]
resource_name = "Run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_6hxy6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gc10f"]
_data = {
&"Attack": SubResource("Animation_o5en2"),
&"Dead": SubResource("Animation_vqggo"),
&"Idle": SubResource("Animation_7qdam"),
&"Jump": SubResource("Animation_gc10f"),
&"RESET": SubResource("Animation_7pt4t"),
&"Run": SubResource("Animation_qkgjm")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1fx0i"]
radius = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2bftf"]
radius = 12.0
height = 34.0

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("deadState")]
script = ExtResource("1_3vkvf")
movementSpeed = 35.0
chaseSpeed = 75.0
deadState = NodePath("StateMachine/Dead")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_4uku2")
metadata/_custom_type_script = "uid://b6gglrtfqcm1e"

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = ExtResource("3_2bftf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CapsuleShape2D_2dwjk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_gc10f")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
unique_name_in_owner = true
root_node = NodePath("%AnimationTree/..")
tree_root = ExtResource("8_b367p")
anim_player = NodePath("../AnimationPlayer")
parameters/Move/blend_position = 0.000888944

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("currentState", "airState")]
script = ExtResource("10_0h3dq")
currentState = NodePath("Patrol")
airState = NodePath("Patrol")
metadata/_custom_type_script = "uid://hku5fvpptc02"

[node name="Patrol" type="Node" parent="StateMachine" node_paths=PackedStringArray("followState")]
script = ExtResource("11_pgva4")
followState = NodePath("../Follow")
metadata/_custom_type_script = "uid://cv8r38s8hab2"

[node name="Follow" type="Node" parent="StateMachine" node_paths=PackedStringArray("patrolState", "attackState")]
script = ExtResource("12_2bftf")
patrolState = NodePath("../Patrol")
attackState = NodePath("../Attack")
metadata/_custom_type_script = "uid://cv8r38s8hab2"

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("followState", "deadState")]
script = ExtResource("13_t6s76")
attackWaitTime = 0.4
followState = NodePath("../Follow")
deadState = NodePath("../Dead")
metadata/_custom_type_script = "uid://cv8r38s8hab2"

[node name="Dead" type="Node" parent="StateMachine" node_paths=PackedStringArray("collisionsArray")]
script = ExtResource("14_4ycpn")
collisionsArray = [NodePath("../../CollisionShape2D"), NodePath("../../AttackArea/AttackCollision"), NodePath("../../HurtBox/CollisionShape2D")]
metadata/_custom_type_script = "uid://cv8r38s8hab2"

[node name="AttackArea" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 1)
collision_layer = 2
collision_mask = 2
monitoring = false
script = ExtResource("9_6hxy6")

[node name="AttackCollision" type="CollisionShape2D" parent="AttackArea"]
unique_name_in_owner = true
position = Vector2(12, 3)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_1fx0i")
debug_color = Color(0.966779, 9.62615e-07, 0.478401, 0.42)

[node name="RayCasts" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="CharacterRay" type="RayCast2D" parent="RayCasts"]
unique_name_in_owner = true
modulate = Color(0.233334, 0, 1, 1)
target_position = Vector2(127, 0)
collision_mask = 2

[node name="AttackRay" type="RayCast2D" parent="RayCasts"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
target_position = Vector2(25, 0)
collision_mask = 2

[node name="EdgeRay" type="RayCast2D" parent="RayCasts"]
unique_name_in_owner = true
modulate = Color(0, 1, 0, 1)
position = Vector2(10, 0)
target_position = Vector2(9, 0)
collide_with_areas = true
collide_with_bodies = false

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("15_pgva4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CapsuleShape2D_2bftf")

[connection signal="animation_finished" from="AnimationTree" to="StateMachine/Attack" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="StateMachine/Dead" method="_on_animation_tree_animation_finished"]
[connection signal="body_entered" from="AttackArea" to="AttackArea" method="_on_body_entered"]
[connection signal="body_entered" from="HurtBox" to="HurtBox" method="_on_body_entered"]
